@@ -4,6 +4,9 @@ iRedMail-0.9.0:
     * New column for SQL backends (mailbox.enablelmtp) and new attribute/value
       pair for LDAP mail user: enabledService=lmtp. Used for LMTP service.
 
+    * Fixed issues:
+        + Postfix cannot resolve IP address under chroot on RHEL/CentOS.
+
 iRedMail-0.8.6:
     * Works on new Linux/BSD distribution releases:
         - Works on Ubuntu 13.10 (saucy). NOTE: phpLDAPadmin is not available
